# Parallel-programming

./: 1-1.jpg:Zone.Identifier  CMakeLists.txt  Report SPM Domenico Erriquez.pdf:Zone.Identifier  Statistics.cpp  VideoMotionDetect.cpp  script.sh
Resources/: VideoTest (online-video-cutter.com).mp4:Zone.Identifier  VideoTest.mkv  VideoTest.mp4:Zone.Identifier  VideoTest2.mp4:Zone.Identifier  VideoTest3.avi  VideoTest3.avi:Zone.Identifier
include/: Functions.hpp
include/ff/: all2all.hpp  combine.hpp  cycle.h  dff.hpp  farm.hpp  gt.hpp  lb.hpp  multinode.hpp  node.hpp  pipeline.hpp  svector.hpp  sysdep.h  ubuffer.hpp
include/ff/distributed/: ff_dadapters.hpp  ff_dgroup.hpp  ff_dgroups.hpp  ff_dinterface.hpp  ff_dintermediate.hpp  ff_dprinter.hpp  ff_dreceiver.hpp  ff_dreceiverMPI.hpp  ff_dsender.hpp  ff_dsenderMPI.hpp  ff_network.hpp  ff_typetraits.hpp  ff_wrappers.hpp
include/ff/distributed/loader/: Makefile  dff_run.cpp
