cmake_minimum_required(VERSION 2.8)
project( VideoMotionDetect )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( VideoMotionDetect VideoMotionDetect.cpp )
target_link_libraries( VideoMotionDetect ${OpenCV_LIBS} )
add_compile_options(-O3)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")